# src/main/kotlin/com/a4a/g8api/models/RefreshToken.kt
@@ -1,0 +1,8 @@
+package com.a4a.g8api.models
+
+import kotlinx.datetime.LocalDateTime
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RefreshToken(val id: Int, val token: String, val expiresAt: LocalDateTime, val userId: Int)
+
